k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookie-ingress
  namespace: bookie-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: baraziza.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookie-service
                port:
                  number: 80
